
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4113: TEZ-1386 breaks hadoop 2 compilation in trunk (cheolsoo)

PIG-4110: TEZ-1382 breaks Hadoop 2 compilation (cheolsoo)

PIG-4105: Fix TestAvroStorage with ibm jdk (fang fang chen via daijy)

PIG-4108: Pig -Dhadoopversion=23 compile fail after TEZ-1317 (daijy)

PIG-4086: Fix Orc e2e tests for tez (daijy)

PIG-4101: Lower tez.am.task.max.failed.attempts to 2 from 4 in Tez mini cluster (cheolsoo)

PIG-4099: "ant copypom" failed with "could not find file $PIG_HOME/ivy/pig.pom to copy" (fang fang chen via cheolsoo)

PIG-4098: Vertex Location Hint api update after TEZ-1041 (jeagles via cheolsoo)

PIG-4088: TEZ-1346 breaks hadoop 2 compilation in trunk (cheolsoo)

PIG-4089: TestMultiQuery.testMultiQueryJiraPig1169 fails in trunk after
PIG-4079 in Hadoop 1 (cheolsoo)

PIG-4085: TEZ-1303 broke hadoop 2 compilation in trunk (cheolsoo)

PIG-4082: TEZ-1278 broke hadoop 2 compilation in trunk (cheolsoo)

PIG-4079: Parallel clause is not honored in local mode (cheolsoo)

PIG-4078: Port more mini cluster tests to Tez - part 6 (rohini)

PIG-4071: Fix TestStore.testSetStoreSchema, TestParamSubPreproc.testGruntWithParamSub,
 TestJobSubmission.testReducerNumEstimation (daijy)

PIG-4074: mapreduce.client.submit.file.replication is not honored in cached files (cheolsoo)

PIG-4052: TestJobControlSleep, TestInvokerSpeed are unreliable (daijy)

PIG-4053: TestMRCompiler succeeded with sun jdk 1.6 while failed with sun jdk 1.7 (daijy)

PIG-3982: ant target test-tez should depend on jackson-pig-3039-test-download (daijy)

PIG-4064: Fix tez auto parallelism test failures (daijy)
