@@ -1494,6 +1494,16 @@ d = foreach c generate (name is not NULL? UPPER(name) : 'FNU LNU') as name, (age
 e = filter d by (name matches '.*MIKE.*') OR (NOT (gpa + 1.5 > 4));
 store e into ':OUTPATH:';\,
             },
+            {
+            'num' => 13,
+            'pig' => q\a = load ':INPATH:/singlefile/studenttab10k' as (name, age, gpa);
+b = load ':INPATH:/singlefile/studentcolon10k' using PigStorage(':') as (name, age, gpa);
+c = union a, b;
+d = group c by name;
+e = load ':INPATH:/singlefile/votertab10k' as (name, age, registration, contributions);
+f = join d by group, e by name using 'replicated';
+store f into ':OUTPATH:';\,
+            },
 		]
 		},
 		{
